--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   flutter_bloc: ^8.1.6
   flutter_localizations:
     sdk: flutter
+  fpdart: ^1.1.1
   intl: ^0.19.0
   posts:
     path: packages/posts
