--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,25 +7,28 @@ environment:
   sdk: ^3.5.0
 
 dependencies:
-  bloc: ^8.1.4
   cupertino_icons: ^1.0.8
   dio: ^5.7.0
   equatable: ^2.0.5
   flutter:
     sdk: flutter
-  flutter_bloc: ^8.1.6
   flutter_localizations:
     sdk: flutter
+  flutter_riverpod: ^2.6.1
   fpdart: ^1.1.1
   intl: ^0.19.0
   posts:
     path: packages/posts
+  riverpod_annotation: ^2.6.1
 
 dev_dependencies:
-  bloc_test: ^9.1.7
+  build_runner: ^2.4.14
+  custom_lint: ^0.7.0
   flutter_test:
     sdk: flutter
   mocktail: ^1.0.4
+  riverpod_generator: ^2.6.3
+  riverpod_lint: ^2.6.3
   very_good_analysis: ^6.0.0
 
 flutter:
